<resources>
    <string name="app_name">砰砰</string>
    <string name="exit_show_promt">再按一次退出应用程序！</string>
    <string name="mine_text">我的</string>
    <string name="chat_text">聊天</string>
    <string name="compere_text">主持人</string>
    <string name="strategy_text">策略建议</string>
    <string name="ranking_list_text">排行榜</string>
    <string name="data_text">数据</string>
    <string name="event_text">事件</string>
    <string name="vacation_text">假期</string>
    <string name="previous_value_text">前值：</string>
    <string name="predict_value_text">预期：</string>
    <string name="publish_value_text">公布：</string>
    <string name="sunday">周日</string>
    <string name="monday">周一</string>
    <string name="thesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="back_today_text">回到今天</string>
    <string name="only_importance_text">只看重要</string>
    <string name="publish_status_text">发布状态</string>
    <string name="all_text">全部</string>
    <string name="have_publish_text">已发布</string>
    <string name="no_publish_text">未发布</string>
    <string name="national_zone_text">国家/地区</string>
    <string name="reset_text">重置</string>
    <string name="finish_text">完成</string>
    <string name="content_have_update_text">内容已更新</string>
    <string name="click_login_text">点击登录</string>
    <string name="phone_num_text">手机号</string>
    <string name="pwd_text">密码</string>
    <string name="please_input_pwd_text">请输入密码</string>
    <string name="register_text">注册</string>
    <string name="bind_phone_text">绑定手机</string>
    <string name="submit_text">提交</string>
    <string name="identify_code_text">手机验证码</string>
    <string name="get_identify_code_text">获取验证码</string>
    <string name="regain_get_text">重新获取</string>
    <string name="phone_format_not_correct_text">手机号格式不正确！</string>
    <string name="verify_code_format_not_correct_text">验证码格式不正确！</string>
    <string name="pwd_format_not_errect_text">密码码格式不正确！</string>
    <string name="forget_pwd_text">忘记密码</string>
    <string name="next_text">下一步</string>
    <string name="please_input_phone_text">请输入您的手机号</string>
    <string name="please_input_again_pwd_text">请再次输入密码</string>
    <string name="setting_text">设置</string>
    <string name="exit_text">退出登录</string>
    <string name="font_size_text">字体大小</string>
    <string name="sys_default_text">系统默认</string>
    <string name="notification_text">通知</string>
    <string name="person_info_text">个人信息</string>
    <string name="nick_text">昵称</string>
    <string name="modify_pwd_text">修改密码</string>
    <string name="modify_phone_text">修改手机</string>
    <string name="cancel_text">取消</string>
    <string name="save_text">保存</string>
    <string name="modify_phone_num_text">修改手机号</string>
    <string name="please_input_new_phone_text">请输入最新手机号</string>
    <string name="nick_name_text">昵称名称</string>
    <string name="use_weixin_text">用微信账号登录</string>
    <string name="qq">用QQ账号登录</string>
    <string name="use_phone_text">使用手机号登录</string>
    <string name="feed_back_text">意见反馈</string>
    <string name="importability_text">0/200</string>
    <string name="publish_message_hint_text">说点什么吧...</string>
    <string name="publish_sgl">请输入您的故事</string>
    <string name="upload_question_pic_text">上传问题图片</string>
    <string name="importability_upload_text">0/6</string>
    <string name="please_input_old_pwd_text">输入旧密码</string>
    <string name="please_input_new_pwd_text">输入新密码</string>
    <string name="weicai_fm_text">微财FM</string>
    <string name="comment_text">评论</string>
    <string name="send_text">发送</string>
    <string name="calendar_remind_text">日历提醒</string>
    <string name="add_remind_text">添加提醒</string>
    <string name="delete_text">删除</string>
    <string name="please_remind_time_text">请选择提醒时间</string>
    <string name="living_text">直播中</string>
    <string name="no_have_live_text">暂无直播</string>
    <string name="not_net_connect_text">无网络链接！</string>
    <string name="tip_text">提示</string>
    <string name="confirm_text">确定</string>
    <string name="about_meilin_text">关于美林</string>
    <string name="action_text">活动</string>
    <string name="live_trade_text">交易</string>
    <string name="available_advances_text">可用预付款</string>
    <string name="have_use_advances_text">已用预付款</string>
    <string name="bail_scale_text">保证金比例</string>
    <string name="shipping_text">持仓</string>
    <string name="trade_text">交易</string>
    <string name="property_text">资产</string>
    <string name="balance_text">余额</string>
    <string name="float_profit_text">浮动盈亏</string>
    <string name="account_text">账户</string>
    <string name="trade_product_text">交易产品</string>
    <string name="optional_text">自选</string>
    <string name="buy_text">买</string>
    <string name="sell_text">卖</string>
    <string name="get_profit_text">获利</string>
    <string name="foreign_text">外汇</string>
    <string name="usd_text">贵金属</string>
    <string name="oil_text">原油</string>
    <string name="cfd_text">指数</string>
    <string name="trade_record_text">交易记录</string>
    <string name="add_funds_record_text">入金记录</string>
    <string name="consume_text">消费记录</string>
    <string name="create_account_text">开设账户</string>
    <string name="please_input_trade_pwd_text">请您输入交易密码</string>
    <string name="please_input_again_trade_pwd_text">请您再次输入交易密码</string>
    <string name="server_disconnect_text">服务器连接断开！</string>
    <string name="take_profit_text">止盈</string>
    <string name="stop_loss_text">止损</string>
    <string name="modify_text">修改</string>
    <string name="close_shipping_text">平仓</string>
    <string name="confirm_stay_order_text">确认挂单</string>
    <string name="open_order_text">下单</string>
    <string name="set_trade_pwd_text">设置交易密码</string>
    <string name="real_name_auth_text">实名认证</string>
    <string name="add_funds_text">入金</string>
    <string name="reduce_funds_text">出金</string>
    <string name="manage_bank_card_text">管理银行卡</string>
    <string name="add_bank_card_text">添加银行卡</string>
    <string name="withdraw_limit_text">提取额度</string>
    <string name="bind_bank_text">绑定银行卡</string>
    <string name="bank_text">银行</string>
    <string name="province_text">省份</string>
    <string name="city_text">城市</string>
    <string name="subbranch_text">支行</string>
    <string name="bind_text">绑定</string>
    <string name="bank_num_text">卡号</string>
    <string name="select_bank_text">选择银行</string>
    <string name="content_text">内容</string>
    <string name="select_bank_card_text">选择银行卡</string>
    <string name="reudce_record_text">出金记录</string>
    <string name="unbind_text">解绑</string>
    <string name="about_us_text">关于我们</string>
    <string name="about_us_content_text1">视财经之微妙，寻盈利之佳法。找到微财，就找到了投资方向！</string>
    <string name="about_us_content_text2">微财财经成立于2016年，是一家集直播与资讯于一体的财经媒体，及时汇聚金融投资行业最快、最准、最全的数据和新闻资讯，为投资者提供最有价值的经融资讯。同时建立全天11小时的外汇财经直播平台，为投资者提供在线直播分析，让客户实时零距离的了解市场变动。</string>
    <string name="about_us_content_text3">微财财经致力于成为国内领先的财经聚合的第三方媒体平台，将构建完善的、全方位的金融服务生态体系，让每一位投资者掌握金融市场即时资讯，谙熟金融市场运行规律。</string>
    <string name="secret_provision_text">隐私条款</string>
    <string name="secret_provision_content_text">用户名和密码 用户一旦注册成功，成为微财财经网站的注册用户，将得到一个密码和用户名。注册用户将对用户名和密码使用保管负全部责任。此外，每个注册用户都要对以其用户名进行的所有活动和事件负全责。注册用户可随时根据系统提示修改密码。注册用户若发现任何非法使用用户帐号或存在安全漏洞的情况，请立即告知本网站管理人员，以便微财财经采取必要合理措施竭力保障注册会员用户信息安全。   Cookies隐私 Cookies是指一种技术，当使用者访问没有Cookies装置的本网站时，本网站之服务器会自动发送Cookies至您的浏览器内，并存储到您的电脑硬盘内，此Cookies便负责记录日后您访问本网站的种种活动、个人资料、浏览习惯、消费习惯甚至信用记录。 运用Cookies技术，本网站能够为您提供更加周到的服务，本网站将会运用Cookies追访您的喜好，从而向您提供感兴趣的信息资料或存储密码，以便您造访本网站时不必每次重复输入密码。   未成年人隐私保护 本网站将建立和维持合理的程序，以保护未成年人个人资料的保密性及安全性。本网站郑重声明：任何18岁以下的未成年人参加网上活动应事先得到家长或其法定监护人（以下统称为“监护人”）的可经查证的同意。 监护人应该承担保护未成年人在网络环境下的隐私权的首要责任。 本网站收集未成年人的个人资料，仅为回复未成年人特定要求的目的，一经回复完毕即从记录中删除，而不会保留这些资料做进一步的利用 未经监护人之同意，本网站将不会使用未成年人之个人资料，亦不会向任何第三方披露或传送可识别该未成年人的个人资料。本网站如收集监护人或未成年人的姓名或其它网络通讯资料之目的仅是为获得监护人同意，则在经过一段合理时间仍未获得同意时，将主动从记录中删除此类资料。 若经未成年人之监护人同意，本网站可对未成年人之个人资料进行收集，本网站将向监护人提供： 1.\t审视自其子女或被监护人收集之资料的机会； 2.\t拒绝其子女或被监护人的个人资料被进一步的收集或利用的机会； 3.\t变更或删除其子女或被监护人个人资料的方式。 监护人有权拒绝本网站与其子女或被监护人做进一步的联络。 本网站收集未成年人的个人资料，这些资料只是单纯作为保护未成年人参与网络活动时的安全，而非是作为其它目的来利用。本网站保证不会要求未成年人提供额外的个人资料，以作为允许其参与网上活动的条件。</string>
    <string name="clear_cache_text">清除缓存</string>
    <string name="danger_explain_text">风险说明</string>
    <string name="camera_and_location_rationale">获取应用所需权限</string>
    <string name="tv_share_content_text">微财TV为您提供全天11小时的外汇财经直播，精心准备《每日一波》、《复盘时间》、《交易进行时》等精品节目，多角度、多领域分析外汇市场,让您及时掌握行情动向，为您的外汇交易之路保驾护航。</string>
    <string name="fm_share_content_text">微财FM匠心独运打造《微财市场电报》、《财经早茶》、《微财书屋》等多档电台节目，为您带来全天14小时的实时资讯播报，让您第一时间获取外汇、原油、黄金等有关财经的实用干货，解锁多样交易技能。</string>
    <string name="app_download_share_content_text">视财经之微妙，寻盈利之佳法。找到微财，就找到了投资方向！</string>
    <string name="detail_text">日历详情</string>
    <string name="k_open">开</string>
    <string name="k_close">收</string>
    <string name="k_max">高</string>
    <string name="k_min">低</string>
    <string name="k_num">量</string>
    <string name="k_amount">额</string>
    <string name="k_exchange">换</string>
    <string name="k_ma">MA</string>
    <string name="k_ma5">5:</string>
    <string name="k_ma10">10:</string>
    <string name="k_ma20">20:</string>
    <string name="k_ma30">30:</string>
    <string name="average_price">均价:%1$s</string>
    <string name="new_price">最新:</string>
    <string name="wan_unit">万手</string>
    <string name="yi_unit">亿手</string>
    <string name="entity_macd">MACD</string>
    <string name="entity_kdj">KDJ</string>
    <string name="entity_wr">WR</string>
    <string name="entity_rsi">RSI</string>
    <string name="entity_boll">BOLL</string>
    <string name="entity_expma">EXPMA</string>
    <string name="entity_dmi">DMI</string>
    <string name="macd_text">MACD</string>
    <string name="kdj_text">KDJ</string>
    <string name="rsi_text">RSI</string>
    <string name="avchat_switch_video_reject">对方不同意音频切换为视频！</string>
    <string name="avchat_notification">正在与%1$s通话中，点击继续</string>
    <string name="avchat_call">网络通话</string>
    <string name="avchat_hangup">结束通话</string>
    <string name="avchat_switch_to_video">切换视频</string>
    <string name="avchat_switch_to_audio">切换语音</string>
    <string name="avchat_video_call_request">请求视频聊天…</string>
    <string name="avchat_audio_call_wifi_unavailable_tip">当前非WiFi环境，每分钟将产生约0.5M的流量</string>
    <string name="avchat_network_grade_0">网络通畅：</string>
    <string name="avchat_network_grade_1">网络正常：</string>
    <string name="avchat_network_grade_2">网络一般：</string>
    <string name="avchat_network_grade_3">网络较差：</string>
    <string name="avchat_refuse">拒绝</string>
    <string name="avchat_receive">开启</string>
    <string name="avchat_pickup">接听</string>
    <string name="avchat_net_error_then_quit">网络异常，通话结束</string>
    <string name="avchat_call_finish">通话结束</string>
    <string name="avchat_peer_reject">对方拒绝了本次通话</string>
    <string name="avchat_peer_protocol_low_version">对方版本过低，请提示对方升级</string>
    <string name="avchat_local_protocol_low_version">版本过低，请升级后使用</string>
    <string name="avchat_invalid_channel_id">对方已挂断</string>
    <string name="avchat_local_call_busy">本地通话中，无法使用易信进行通话。</string>
    <string name="avchat_peer_busy">对方正在通话中，请稍后再拨。</string>
    <string name="avchat_wait_recieve">等待对方接听…</string>
    <string name="avchat_audio_call_request">请求通话</string>
    <string name="avchat_connecting">连接中…</string>
    <string name="avchat_audio_to_video_invitation">对方邀请你开启视频聊天…</string>
    <string name="avchat_cannot_establish_connection">无法和对方建立连接</string>
    <string name="cancle">取消</string>
    <string name="title">请选择日期</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="report_description_text">举报描述</string>
</resources>