<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:padding="@dimen/_20px">

        <TextView
            android:id="@+id/tv_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/_30px"
            android:text="@string/cancle"
            android:textColor="@color/_488EFE"
            android:textSize="@dimen/_50px" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title"
            android:visibility="invisible"
            android:textColor="@color/_488EFE"
            android:textSize="@dimen/_55px" />

        <TextView
            android:id="@+id/tv_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/_30px"
            android:text="@string/commit"
            android:textColor="@color/_488EFE"
            android:textSize="@dimen/_50px"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1px"
        android:background="@color/_ebebeb" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12px"
            android:background="@color/background"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_35px"
            android:paddingLeft="@dimen/_40px"
            android:paddingRight="@dimen/_40px"
            android:paddingTop="@dimen/_35px">

            <com.ttt.qx.qxcall.widget.DatePickerView
                android:id="@+id/year_pv"
                android:layout_width="0dp"
                android:layout_height="@dimen/_350px"
                android:layout_weight="3" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/year"
                android:textColor="@color/text2"
                android:textSize="@dimen/_50px" />

            <com.ttt.qx.qxcall.widget.DatePickerView
                android:id="@+id/month_pv"
                android:layout_width="0dp"
                android:layout_height="@dimen/_350px"
                android:layout_weight="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/month"
                android:textColor="@color/text2"
                android:textSize="@dimen/_50px" />

            <com.ttt.qx.qxcall.widget.DatePickerView
                android:id="@+id/day_pv"
                android:layout_width="0dp"
                android:layout_height="@dimen/_350px"
                android:layout_weight="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/day"
                android:textColor="@color/text2"
                android:textSize="@dimen/_50px" />

            <com.ttt.qx.qxcall.widget.DatePickerView
                android:id="@+id/hour_pv"
                android:layout_width="0dp"
                android:layout_height="@dimen/_350px"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/hour_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/hour"
                android:textColor="@color/text2"
                android:textSize="@dimen/_50px" />

            <com.ttt.qx.qxcall.widget.DatePickerView
                android:id="@+id/minute_pv"
                android:layout_width="0dp"
                android:layout_height="@dimen/_350px"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/minute_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/minute"
                android:textColor="@color/text2"
                android:textSize="@dimen/_50px" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>